cls_rgw_gc: remove_entries() reads urgent data xattrs once and writes them back

because the code was decrementing urgent_data.num_xattr_urgent_entries
on the head, but was not writing back the updated xattrs, the value is
no longer consistent with the xattr map. for this reason, we set this
value explicitly when writing back the xattrs:

  urgent_data.num_xattr_urgent_entries = xattr_urgent_data_map.size();

Fixes: https://tracker.ceph.com/issues/48329

Signed-off-by: Casey Bodley <cbodley@redhat.com>